# langchain-service

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
app/: .env.example  agent.py  ingest.py  main.py
config/: kong.yml  kong.yml.example
